 10-Sep-2024  V1.724 Add load completion check for the number of nonpolymer entity instances with validation data
 22-Oct-2024  V1.725 Remove dependency on edmaps holdings file (no longer generating Map Coefficient MTZ files);
                     Add CLI support for performing final sanity check for ExDB loading and holdings in etl.load_ex.DbLoadingWorkflow task;
                     Update CI/CD testing to use python 3.10
 23-Dec-2024  V1.726 Skip integers that exceed max int32 in DataTransformFactory
  7-Jan-2025  V1.727 Handle "None" values in vrpt data
 22-Jan-2025  V1.728 Add Imgs format option (for jpg/svg generation) to splitIdList()
 11-Feb-2025  V1.800 Removal of unused code and dependencies (MySQL, SQL, CockroachDB, CrateDB, and other accessory code snippets)
 26-Mar-2025  V1.801 Add support for prepending content type and directory hash for splitIdList output
 14-May-2025  V1.802 Add support for IHM repository holdings and model file loading
  1-Jul-2025  V1.803 Error handling for splitIdListAndWriteToFiles
 24-Jul-2025  V1.804 Switch to lower-case for CSM ID list generation (for incremental BCIF/image workflow updates)
 13-Aug-2025  V1.805 Make use of configured port number in constructing MongoDB URI string
  2-Sep-2025  V1.806 Error handling in RepoLoadWorkflow and other improvements relevant to bcif incremental workflow
 10-Sep-2025  V1.807 Fault-tolerance for RepoLoadWorkflow splitIdListAndWriteToFiles
  1-Oct-2025  V1.808 Adjustments to schema builder tools needed for merging DW schemas with ExDB schemas;
                     Add support for making manually-configured categories and attributes "required" in JSON schemas;
                     Add support for providing dictionary of indexes to create during MongoDB document load;
                     Add support for nested subcategories needed for merging ExDB and DW;
                     Change usage of "databaseName" to "collectionGroupName" (where appropriate) to generalize terminology